--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,15 +1,17 @@
 project_name: douyinctl
-# This is an example .goreleaser.yml file with some sensible defaults.
-# Make sure to check the documentation at https://goreleaser.com
 before:
   hooks:
-    # You may remove this if you don't use go modules.
     - go mod tidy
-    # you may remove this if you don't need go generate
     - go generate ./...
 builds:
-  - env:
+  - main: ./cmd/splayer/main.go
+    env:
       - CGO_ENABLED=0
+      - GO111MODULE=on
+    ldflags:
+      - -X github.com/mi1wei/splayer/pkg/common.version={{ .Version }}
+      - -X github.com/mi1wei/splayer/pkg/common.buildDate={{ time "2006-01-02T15:04:05Z07:00" }}
+      - -X github.com/mi1wei/splayer/pkg/common.gitTag={{ .Env.GIT_TAG }}
     goos:
       - linux
       - windows
@@ -17,7 +19,6 @@ builds:
 
 archives:
   - format: tar.gz
-    # this name template makes the OS and Arch compatible with the results of uname.
     name_template: >-
       {{ .ProjectName }}_
       {{- title .Os }}_
@@ -25,10 +26,9 @@ archives:
       {{- else if eq .Arch "386" }}i386
       {{- else }}{{ .Arch }}{{ end }}
       {{- if .Arm }}v{{ .Arm }}{{ end }}
-    # use zip for windows archives
     format_overrides:
-    - goos: windows
-      format: zip
+      - goos: windows
+        format: zip
 checksum:
   name_template: 'checksums.txt'
 snapshot:
@@ -39,8 +39,3 @@ changelog:
     exclude:
       - '^docs:'
       - '^test:'
-
-# The lines beneath this are called `modelines`. See `:help modeline`
-# Feel free to remove those if you don't want/use them.
-# yaml-language-server: $schema=https://goreleaser.com/static/schema.json
-# vim: set ts=2 sw=2 tw=0 fo=cnqoj
